--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "modules/slab"]
 	path = modules/slab
 	url = https://github.com/coding-jackalope/Slab
+[submodule "modules/sdf"]
+	path = modules/sdf
+	url = https://github.com/Tjakka5/love-sdf-text.git
