--- a/.gitmodules
+++ b/.gitmodules
@@ -39,4 +39,7 @@
 	url = https://github.com/coding-jackalope/Slab
 [submodule "modules/sdf"]
 	path = modules/sdf
-	url = https://github.com/Tjakka5/love-sdf-text.git
+	url = https://github.com/flamendless/love-sdf-text.git
+[submodule "modules/https"]
+	path = modules/https
+	url = https://github.com/LPGhatguy/luajit-request.git
