Added TimelineEvents module

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "modules/inspect"]
 	path = modules/inspect
 	url = https://github.com/kikito/inspect.lua
+[submodule "modules/tle"]
+	path = modules/tle
+	url = https://github.com/babulous/TimelineEvents
