--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "modules/tle"]
 	path = modules/tle
 	url = https://github.com/flamendless/TimelineEvents
+[submodule "modules/json"]
+	path = modules/json
+	url = https://github.com/rxi/json.lua.git
