--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "modules/json"]
 	path = modules/json
 	url = https://github.com/rxi/json.lua.git
+[submodule "modules/arson"]
+	path = modules/arson
+	url = https://github.com/flamendless/arson.lua
