More revisions and improvements;
Replace strict.lua with strictness module and applied to some data;
Removed Dialogue in Intro;
Added lighting to fireflies in Outside;
Added lighting to title in Intro;
Light to follow colors specified in Palette (awaiting artist's color decision);
Fixed Debugging:Transform image display;
Fixed Debugging:Light;

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "modules/jprof"]
 	path = modules/jprof
 	url = https://github.com/pfirsich/jprof
+[submodule "modules/strictness"]
+	path = modules/strictness
+	url = https://github.com/Yonaba/strictness
