Added Peeker submodule for screen recording

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "libs/ExportTextureAtlas"]
 	path = libs/ExportTextureAtlas
 	url = https://github.com/EngineerSmith/Export-TextureAtlas
+[submodule "modules/peeker"]
+	path = modules/peeker
+	url = https://github.com/flamendless/peeker
