--- a/.luarc.json
+++ b/.luarc.json
@@ -4,5 +4,6 @@
     "Lua.workspace.checkThirdParty": false,
     "Lua.workspace.library": [
         "${3rd}/love2d/library"
-    ]
+    ],
+	"Lua.diagnostics.globals": ["toLua"]
 }
