Add beehive submodule + update submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "libs/ExportTextureAtlas"]
 	path = libs/ExportTextureAtlas
 	url = https://github.com/EngineerSmith/Export-TextureAtlas
+[submodule "modules/beehive"]
+	path = modules/beehive
+	url = https://github.com/drhayes/beehive.lua
